Add unit tests + fix Parquet write-support config bug (validated on Spark 3.5)
- Add MultiDeltaWriterSuite (ScalaTest): delta routing, append accumulation,
  dropRouteColumn, pure-parquet sink, fail-fast, and single-pass verification.
- Fix NPE 'writeSupportClass cannot be null': serialize the Job configuration
  that ParquetFileFormat.prepareWrite mutates (schema + write-support class),
  not the bare session conf, so executors can construct the Parquet writer.
- Wire JDK17+ --add-opens into Test/javaOptions; add .gitignore.

Validated end-to-end against Spark 3.5.1 / Delta 3.2.0: all tests pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Y7UCzBKrmY2g6xi71k6hDe